syntax = "proto3";
package message;


service Echo {   
  rpc EchoMessage (EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
  string serverID = 2;
}
